--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.5
   font_awesome_flutter: ^10.2.1
+  cloud_firestore: ^4.0.2
+  firebase_core: ^2.1.0
+  firebase_auth: ^4.0.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
