--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   firebase_core: ^2.1.0
   firebase_auth: ^4.0.2
   provider: ^6.0.4
+  intl: ^0.18.0
+  pdf: ^3.9.0
+  printing: ^5.10.1
+  path_provider: ^2.0.12
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
