--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.heart_rate_monitor">
    <application
-        android:label="heart_rate_monitor"
+        android:label="Heart Rate Monitor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
